# phoney

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .ruff.toml  AGENTS.md  LICENSE  Makefile  main.py  package.json  phoney.py  pyproject.toml
.github/: renovate.json
.github/workflows/: test.yml
