[project]
name = "phoney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kittentts",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
    "ruff>=0.15.17",
]

[tool.uv.sources]
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl" }
